# ShopifyMigration

./: .gitignore  MIGRATION_CHECKLIST.md  MIGRATION_OUTCOME_SUMMARY.md  MIGRATION_PLAN.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt
config/: category_mapping.json  config.yaml  field_mapping.json
docs/: ERROR_HANDLING.md  FIELD_MAPPING.md  MIGRATION_GUIDE.md
scripts/: aggressive_fix_batch5.py  analyze_all_20_batches.py  analyze_csv.py  analyze_migration_output.py  analyze_skipped_products.py  analyze_source_for_migration.py  check_migration_progress.py  check_source_missing_products.py  check_status.py  compare_migrated_vs_source.py  compare_products.py  count_products_variants.py  create_batches_11_plus.py  create_csv_summary.py  create_final_migration_503.py  create_missing_products_report.py  extract_1926_product_names.py  extract_all_product_names.py  final_count_verification.py  final_migration_503_products.py  find_more_migratable_products.py  fix_all_batches_6_10.py  fix_and_remigrate_batches_6_10.py  fix_batch2_inventory_policy.py  fix_batch5_titles.py  fix_parent_prices_6_10.py  fix_prices_and_remigrate_6_10.py  list_all_products_11_15_and_skipped.py  migrate_10_products.py  migrate_all_products.py  migrate_all_products_20_batches.py  migrate_all_products_complete_20_batches.py  migrate_batches.py  migrate_batches_11_15.py  migrate_batches_6_10.py  migrate_custom.py  migrate_final_batches_11_19.py  migrate_final_batches_20_28.py  migrate_missing_products.py  migrate_remaining_products.py  (+5 more)
src/: __init__.py  csv_handler.py  (+4 more)
(+23 files in other folders)
